refactor language tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
       </section>
       <footer>
-        <div class="lang-bar"></div>
+        <div class="lang-bar">
           {% for language in site.data.lang %}
             {% for tab in item.route %}
               {% if page.title == tab.title %}
