--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,18 @@
             {% endfor %}
           {% endfor %}
         </div>
-
-        <p>This project is maintained by <a class="github-page" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        <p><small>Hosted on GitHub Pages</small></p>
+        
+        {% if page.lang == 'en' %}
+          <p>Developed and maintained by <a class="github-page" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% else %}
+          <p>由<a class="github-page" href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>開發及維護</p>
+        {% endif %}
+        
+        {% if page.lang == 'en' %}
+          <p><small>Hosted on GitHub Pages</small></p>
+        {% else %}
+          <p><small>寄存於GitHub Pages</small></p>
+        {% endif %}
       </footer>
     </div>
   </body>
